<resources>
    <string name="app_name">心悦护理手机端</string>
    <string name="action_settings">Settings</string>
    <string name="et_phone">账号/手机号码</string>
    <string name="et_mobile">手机号码</string>
    <string name="et_password">密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="tv_register">立即注册</string>
    <string name="btn_sure">确认</string>
    <string name="btn_set">重置密码</string>
    <string name="tv_forget">忘记密码</string>
    <string name="tv_wenxin">微信登陆</string>
    <string name="tv_microblog">微博登陆</string>
    <string name="tv_qq">QQ登陆</string>
    <string name="et_verifiy">验证码</string>
    <string name="tv_getverifiy">获取验证码</string>
    <string name="tv_have">已有账号？</string>
    <string name="tv_direct">直接登录</string>
    <string name="et_writephone">请输入手机号码</string>
    <string name="et_writeverify">请输入验证码</string>
    <string name="et_resetpsd">请确认新密码</string>
    <string name="tv_rule">请输入6-32位字符，需字母、数字、符号两种以上组合，区分大小写。</string>
    <string name="tv_mobile_null">手机号码不能为空</string>
    <string name="tv_mobile_right">请输入正确的手机号码</string>
    <string name="tv_psd_right">密码不能为空</string>
    <string name="tv_user_null">用户不存在,请注册</string>
    <string name="tv_home">首页</string>
    <string name="tv_community">社区</string>
    <string name="tv_message">消息</string>
    <string name="tv_my">我的</string>
    <string name="tv_phone_null">手机号码不能为空</string>
    <string name="tv_phone_right">请输入正确的手机号码</string>
    <!--健康护理师-->
    <string name="select_health">健康护理师</string>
    <string name="tv_order_teacher">预约护理师</string>
    <string name="select_tv_servier">选择服务套餐</string>
    <string name="select_btn_stairone">一级</string>
    <string name="select_btn_stairtwo">二级</string>
    <string name="select_btn_stairthree">三级</string>
    <string name="select_tv_diff">选择不适类型</string>
    <string name="select_tv_selpeople">服务人员</string>
    <string name="select_tv_sermode">服务模式</string>
    <string name="select_cb_monther">妈妈</string>
    <string name="select_cb_body">宝宝</string>
    <string name="select_btn_find">快速查找</string>
    <string name="select_servier_time">服务时间：</string>
    <string name="tv_remark">备注信息：</string>
    <string name="select_servier_address">选择服务时地址</string>
    <string name="nurse_btn_order">立即预约</string>
    <string name="nurse_btn_communication">前去沟通</string>
    <string name="select_get_time">请选择上门时间</string>
    <string name="nurser_level_content">母婴健康检测、分析、评估、家居环境、评估、建议、心理健康、评估、咨询、营养检测、评估、调理、疾病预防、保健、运动疗法、康复保健、起居健康、睡眠管理、亚健康指导、管理</string>
    <string name="order_tv_bodynum">宝宝数量：</string>
    <string name="order_tv_setmeal">服务名称：</string>
    <string name="order_tv_mode">服务模式：</string>
    <string name="tv_sermoney">服务价格：</string>
    <!--我的-->
    <string name="my_order">我的订单</string>
    <string name="my_address">服务地址</string>
    <string name="text_edit">编辑</string>
    <string name="text_delect">删除</string>
    <string name="text_defaddr">设为默认</string>
    <string name="text_collect">我的收藏</string>
    <string name="text_info">个人资料</string>
    <string name="text_revise">修改密码</string>
    <string name="text_advice">意见反馈</string>
    <string name="text_about">关于我们</string>
    <string name="text_check">检查版本</string>
    <string name="text_protocol">服务协议</string>
    <string name="text_help">客服与帮助</string>
    <string name="text_masg">我的消息</string>
    <string name="text_favorable">优惠券</string>
    <string name="btn_exit">退出登录</string>
    <string name="text_set">设置</string>
    <string name="text_my">我的</string>
    <string name="text_original_psd">原密码</string>
    <string name="text_new_psd">新密码</string>
    <string name="input_original_psd">请输入当前密码</string>
    <string name="input_new_psd">请输入新密码</string>
    <string name="input_sure_psd">确认新密码</string>
    <string name="input_rule_one">1.为了您的账号安全，新旧密码必须不同；</string>
    <string name="input_rule_two">2.请输入6-32位字符，需字母、数字、符号两种以上组合，区分大小写。</string>
    <string name="input_question">问题描述</string>
    <string name="text_version">当前版本：</string>
    <string name="text_relation">联系电话：</string>
    <string name="text_official">官网地址：</string>
    <string name="text_wechat">官方微信：</string>
    <string name="confirm_tv_teather">护理师预约：</string>
    <string name="confirm_tv_money">服务费用：</string>
    <string name="confirm_tv_states">选择支付方式</string>
    <string name="confirm_tv_wechat">微信支付</string>
    <string name="confirm_tv_alipay">支付宝支付</string>
    <string name="comm_et_content">说说这位护理师给你留下的印象吧～</string>
    <string name="text_addimage">添加照片</string>
    <string name="comm_tv_skill">专业技能与服务态度</string>
    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="comm_btn">提交评价</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>

    <string name="no_result">对不起，没有搜索到相关数据！</string>
</resources>
