<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/include_login"></include>
    <View
        style="@style/view_line"
        ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rl_info"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/w30"
            android:layout_height="@dimen/h90">
            <TextView
                style="@style/text_sixthree"
                android:layout_centerVertical="true"
                android:text="@string/text_info"/>
            <ImageView
                style="@style/my_next"
                android:layout_marginRight="@dimen/w30"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/w1"
                android:layout_alignParentBottom="true"
                android:background="@color/color_view_line"></View>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_revise"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/w30"
            android:layout_height="@dimen/h90">
            <TextView
                style="@style/text_sixthree"
                android:layout_centerVertical="true"
                android:text="@string/text_revise"/>
            <ImageView
                style="@style/my_next"
                android:layout_marginRight="@dimen/w30"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/w1"
                android:layout_alignParentBottom="true"
                android:background="@color/color_view_line"></View>
        </RelativeLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_white"
            android:layout_marginTop="@dimen/h35"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_about"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/w30"
                android:layout_height="@dimen/h90">
                <TextView
                    style="@style/text_sixthree"
                    android:layout_centerVertical="true"
                    android:text="@string/text_about"/>
                <ImageView
                    style="@style/my_next"
                    android:layout_marginRight="@dimen/w30"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/w1"
                    android:layout_alignParentBottom="true"
                    android:background="@color/color_view_line"></View>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_check"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/w30"
                android:layout_height="@dimen/h90">
                <TextView
                    style="@style/text_sixthree"
                    android:layout_centerVertical="true"
                    android:text="@string/text_check"/>
                <ImageView
                    style="@style/my_next"
                    android:layout_marginRight="@dimen/w30"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/w1"
                    android:layout_alignParentBottom="true"
                    android:background="@color/color_view_line"></View>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_protocol"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/w30"
                android:layout_height="@dimen/h90">
                <TextView
                    style="@style/text_sixthree"
                    android:layout_centerVertical="true"
                    android:text="@string/text_protocol"/>
                <ImageView
                    style="@style/my_next"
                    android:layout_marginRight="@dimen/w30"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/w1"
                    android:layout_alignParentBottom="true"
                    android:background="@color/color_view_line"></View>
            </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="@dimen/w600"
        android:layout_height="@dimen/h80"
        android:textColor="@color/color_white"
        android:textSize="@dimen/thirty_four"
        android:layout_marginTop="@dimen/h60"
        android:background="@drawable/btn_blue_bg"
        android:layout_gravity="center"
        android:text="@string/btn_exit"/>

</LinearLayout>
