<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_marginTop="@dimen/h60">
        <ImageView
            android:layout_width="@dimen/w140"
            android:layout_height="@dimen/h140"
            android:layout_centerInParent="true"
            android:background="@mipmap/logo_bg"/>
        <ImageView
            android:layout_width="@dimen/w71"
            android:layout_height="@dimen/h61"
            android:layout_centerInParent="true"
            android:background="@mipmap/logo_center"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/twenty_six"
        android:textColor="@color/color_bule"
        android:layout_marginTop="@dimen/h15"
        android:layout_gravity="center"
        android:text="心悦护理师"/>

    <View
        style="@style/view_line"
        android:layout_marginTop="@dimen/h60"
        >
    </View>
   <LinearLayout
       style="@style/set_ll"
       android:orientation="horizontal"
       >
      <TextView
          style="@style/text_night"
          android:layout_gravity="center"
          android:text="@string/text_version"/>
       <TextView
           style="@style/text_sixeight"
           android:text="V1.0.2"
           android:layout_gravity="center"
           />
   </LinearLayout>
    <View
        style="@style/view_line"
        >
    </View>
    <LinearLayout
        style="@style/set_ll"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/text_night"
            android:layout_gravity="center"
            android:text="@string/text_relation"/>
        <TextView
            style="@style/text_sixeight"
            android:layout_gravity="center"
            android:text="0755-21517516"
            />
    </LinearLayout>
    <View
        style="@style/view_line"
        >
    </View>
    <LinearLayout
        style="@style/set_ll"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/text_night"
            android:layout_gravity="center"
            android:text="@string/text_official"/>
        <TextView
            style="@style/text_sixeight"
            android:layout_gravity="center"
            android:text="www.szxyyd.com"
            />
    </LinearLayout>
    <View
        style="@style/view_line"
        >
    </View>
    <LinearLayout
        style="@style/set_ll"
        android:orientation="horizontal"
        >
        <TextView
            style="@style/text_night"
            android:layout_gravity="center"
            android:text="@string/text_wechat"/>
        <TextView
            style="@style/text_sixeight"
            android:text="szxyyd"
            android:layout_gravity="center"
            />
    </LinearLayout>

</LinearLayout>
