<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<include
    android:id="@+id/top"
    layout="@layout/include_login">
</include>
    <View
        android:id="@+id/view"
        style="@style/view_line"
        android:layout_below="@id/top"
        ></View>
    <LinearLayout
        android:id="@+id/ll_addree"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h143"
        android:paddingLeft="@dimen/w30"
        android:paddingTop="@dimen/h30"
        android:layout_below="@id/view"
        android:background="@color/color_white"
        >
        <include
            layout="@layout/view_addr"></include>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_info"
        style="@style/set_ll"
        android:layout_marginTop="@dimen/h10"
        android:layout_below="@id/ll_addree"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_order"
            style="@style/text_twosix_thirty"
            android:layout_centerVertical="true"
            android:text="@string/confirm_tv_teather"/>
        <TextView
            android:id="@+id/tv_order_name"
            style="@style/text_thirty"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_order"
            android:layout_marginLeft="@dimen/w20"
            android:text="姓名"
            />
        <View
           style="@style/view_line"
            ></View>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_money"
        style="@style/set_ll"
        android:layout_below="@id/rl_info"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_sermoney"
            style="@style/text_twosix_thirty"
            android:layout_gravity="center"
            android:text="@string/confirm_tv_money"
            />
        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/thirty"
            android:textColor="@color/color_red"
            android:layout_toRightOf="@id/tv_sermoney"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/w10"
            android:text="¥"/>
        <TextView
            android:id="@+id/tv_order_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/thirty"
            android:textColor="@color/color_red"
            android:layout_toRightOf="@id/tv"
            android:layout_gravity="center"
            android:text="0.00"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_states"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/thirty"
        android:textColor="@color/color_six_a"
        android:layout_marginLeft="@dimen/w30"
        android:layout_marginTop="@dimen/h30"
        android:text="@string/confirm_tv_states"
        android:layout_below="@id/ll_money"
        />
    <RelativeLayout
        android:id="@+id/rl_skil"
        style="@style/set_ll"
        android:layout_marginTop="@dimen/h10"
        android:paddingRight="@dimen/w30"
        android:layout_below="@id/tv_states"
        >
        <ImageView
            android:id="@+id/iv1"
            android:layout_width="@dimen/w40"
            android:layout_height="@dimen/h40"
            android:layout_centerVertical="true"
            android:background="@mipmap/friend"/>
        <TextView
            style="@style/text_twosix_thirty"
            android:layout_marginLeft="@dimen/w30"
            android:layout_toRightOf="@id/iv1"
            android:layout_centerVertical="true"
            android:text="@string/confirm_tv_wechat"
            />
        <CheckBox
            android:id="@+id/cb_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@drawable/btn_radio"
            ></CheckBox>
    </RelativeLayout>
    <View
        android:id="@+id/view3"
        style="@style/view_line"
        android:layout_below="@id/rl_skil"
        ></View>
    <RelativeLayout
        style="@style/set_ll"
        android:paddingRight="@dimen/w30"
        android:layout_below="@id/view3"
        >
        <ImageView
            android:id="@+id/iv2"
            android:layout_width="@dimen/w40"
            android:layout_height="@dimen/h40"
            android:layout_centerVertical="true"
            android:background="@mipmap/def_pay"/>

        <TextView
            style="@style/text_twosix_thirty"
            android:layout_marginLeft="@dimen/w30"
            android:layout_toRightOf="@id/iv2"
            android:layout_centerVertical="true"
            android:text="@string/confirm_tv_alipay"/>
        <CheckBox
            android:id="@+id/rb_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:button="@drawable/btn_radio"
            android:layout_centerVertical="true"
            ></CheckBox>
    </RelativeLayout>

    <LinearLayout
        style="@style/set_ll"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <include
            layout="@layout/view_money"></include>
    </LinearLayout>
</RelativeLayout>
