<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/w30"
    android:background="@color/color_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/iv_people"
            android:layout_width="@dimen/w27"
            android:layout_height="@dimen/h30"
            android:background="@mipmap/iv_people"
            />
        <TextView
            android:id="@+id/tv_addr_name"
            style="@style/text_sixthree"
            android:layout_toRightOf="@id/iv_people"
            android:layout_marginLeft="@dimen/w20"
            />
        <ImageView
            android:id="@+id/iv_haoma"
            android:layout_width="@dimen/w24"
            android:layout_height="@dimen/h31"
            android:layout_toRightOf="@id/tv_addr_name"
            android:layout_marginLeft="@dimen/w125"
            android:background="@mipmap/iv_haoma"/>
        <TextView
            android:id="@+id/tv_addr_phone"
            style="@style/text_sixthree"
            android:layout_marginLeft="@dimen/w20"
            android:layout_toRightOf="@id/iv_haoma"
            android:text="手机号码"
            />

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="@dimen/w24"
            android:layout_height="@dimen/h31"
            android:layout_below="@id/iv_haoma"
            android:layout_marginTop="@dimen/h20"
            android:background="@mipmap/iv_location"/>
        <TextView
            android:id="@+id/tv_addr"
            style="@style/gv_text_six"
            android:layout_toRightOf="@id/iv_location"
            android:layout_below="@id/iv_haoma"
            android:layout_marginTop="@dimen/h30"
            android:layout_marginLeft="@dimen/w30"
            android:text="地址"
            />
    </RelativeLayout>

    <View
        style="@style/view_line"
        android:layout_marginTop="@dimen/h20"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/h20"
        android:paddingBottom="@dimen/h20"
        >
        <ImageView
            android:id="@+id/btn_radio"
            android:layout_width="@dimen/w38"
            android:layout_height="@dimen/h38"
            android:background="@mipmap/def_selnotaddr"
            />
        <TextView
            style="@style/gv_text_six"
            android:layout_toRightOf="@id/btn_radio"
            android:layout_marginLeft="@dimen/w30"
            android:text="@string/text_defaddr"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/ll_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/btn_edit"
                    android:layout_width="@dimen/w26"
                    android:layout_height="@dimen/h26"
                    android:background="@mipmap/iv_edit"/>
                <TextView
                    style="@style/gv_text_six"
                    android:layout_marginLeft="@dimen/w10"
                    android:text="@string/text_edit"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_delect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/w30"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/btn_delect"
                    android:layout_width="@dimen/w26"
                    android:layout_height="@dimen/h26"
                    android:background="@mipmap/iv_ivdelect"/>
                <TextView
                    style="@style/gv_text_six"
                    android:layout_marginLeft="@dimen/w10"
                    android:text="@string/text_delect"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
